<resources>
    <string name="app_name">MileMate</string>
    <string name="app_settings">App Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="add_car">Add car</string>
    <string name="previous">Previous</string>

    <!-- Strings for TitleFragment -->
    <string name="no_cars">There are no linked cars to this application. :(</string>

    <string name="placeholder">Placeholder</string>
    <string name="check_up_expiry_date">Check-up expiry date</string>

    <!-- Strings for CarAddFragment -->
    <string name="add_newCar_label">Add a new car</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="select_residence">Select your country of residence:</string>
    <string name="car_name">Car name</string>
    <string name="car_brand_model">Car brand/model</string>
    <string name="car_mileage">Car mileage</string>
    <string name="user_settings">User Settings</string>

    <!-- Strings for CheckUpFragment -->
    <string name="checkup_fragment_label">Check-Up</string>
    <string name="checkup_fragment_saveBtn">Check-Up</string>
    <string name="check_UpBtn">Check-Up</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_driving_license">Enter your driving license expiry date:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_3">Car 3</string>
    <string name="car_4">Car 4</string>
    <string name="car_1">Car 1</string>
    <string name="car_2">Car 2</string>
    <string name="remove_car">Remove car</string>
    <string name="saved_images">/data/user/0/com.example.milemate/files/saved_images</string>
    <string name="edit_car_information">Edit car information</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="drive_stats">Driving statistics</string>

    <!-- Strings for user settings -->
    <string-array name="array_regions">
        <item>Lithuania</item>
        <item>Latvia</item>
        <item>Estonia</item>
        <item>Poland</item>
        <item>Germany</item>
        <item>Sweden</item>
    </string-array>
</resources>