<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettingsFragment">

    <Spinner
        android:id="@+id/spinnerRegionUsrSet"
        android:layout_width="293dp"
        android:layout_height="58dp"
        android:contentDescription="@string/choose_your_country"
        android:labelFor="@+id/spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchResidenceUsrSet"
        app:layout_constraintVertical_bias="0.029" />

    <Switch
        android:id="@+id/switchResidenceUsrSet"
        android:layout_width="334dp"
        android:layout_height="49dp"
        android:text="@string/select_residence"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchLicenseUsrSet"
        android:layout_width="334dp"
        android:layout_height="49dp"
        android:text="@string/enter_driving_license"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRegionUsrSet"
        app:layout_constraintVertical_bias="0.028"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="353dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchLicenseUsrSet"
        app:layout_constraintVertical_bias="0.057" />

</androidx.constraintlayout.widget.ConstraintLayout>